--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,7 +17,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.3",
+    "axios": "^0.25.0",
     "craco-antd": "^1.19.0",
+    "http-proxy-middleware": "^2.0.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -57,7 +60,6 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prop-types": "^15.8.1"
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
