--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.3",
     "axios": "^0.25.0",
+    "better-scroll": "^2.4.2",
     "craco-antd": "^1.19.0",
     "http-proxy-middleware": "^2.0.2",
     "normalize.css": "^8.0.1",
