--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "craco-antd": "^1.19.0",
     "http-proxy-middleware": "^2.0.2",
     "normalize.css": "^8.0.1",
+    "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/pubsub-js": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^7.11.0",
