--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
       "import/no-unresolved": 0,
       "trailing-comma": 0,
       "comma-dangle": 0,
+      "no-nested-ternary": 0,
       "react/function-component-definition": 0,
       "object-curly-newline": 0,
       "linebreak-style": 0,
